--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
         paymentId: document.getElementById('payment-id').value,
         amount: document.getElementById('amount').value,
         date: document.getElementById('payment-date').value, 
-        currency: "EUR"
+        currency: "USD"
       };
   
       // Formuliervalidatie
