test for index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
       }
   
       try {
-        const response = await fetch('https://RG-paymentsystem23.northeurope.azurecontainer.io/create-payment', {  // Zorg ervoor dat je HTTPS gebruikt
+        const response = await fetch('RG-paymentsystem23.northeurope.azurecontainer.io', {  // Zorg ervoor dat je HTTPS gebruikt
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
