--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
       }
   
       try {
-        const response = await fetch('http://rg-paymentsystem1.northeurope.azurecontainer.io/payment', { 
+        const response = await fetch('http://rg-paymentsystem1.northeurope.azurecontainer.io/api/payments', { 
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
