--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
   
       const paymentData = {
         paymentId: document.getElementById('payment-id').value,
-        amount: document.getElementById('amount').value,
+        amount: parseFloat(document.getElementById('amount').value),
         date: document.getElementById('payment-date').value, 
         currency: "USD"
       };
