--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,8 +16,8 @@
       e.preventDefault();
   
       const paymentData = {
-        id: document.getElementById('payment-id').value,
-        reservationId: document.getElementById('reservation-id').value, 
+        id: parseInt(document.getElementById('payment-id').value, 10),  
+        reservationId: parseInt(document.getElementById('reservation-id').value, 10),  
         amount: parseFloat(document.getElementById('amount').value),
         status: document.getElementById('status').value, 
         currency: document.getElementById('currency').value, 
