--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
 
   
       try {
-        const response = await fetch('http://10.6.5.4/api/payments', { 
+        const response = await fetch('http://RG-paymentsystem1.northeurope.azurecontainer.io/api/payments', { 
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
