plz plz plz werk!

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
 
   
       try {
-        const response = await fetch('http://api.fonteyn.store/api/payments', { 
+        const response = await fetch('http://rg-paymentsystem40.northeurope.azurecontainer.io/api/payments', { 
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
